# chipolata

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: CI (dev).yml  CI (main).yml  CI.yml  docs.yml
chipolata/: all.html  constant.COSMAC_VIP_PROCESSOR_SPEED_HERTZ.html  enum.EmulationLevel.html  enum.ErrorDetail.html  enum.ProcessorStatus.html  enum.StateSnapshot.html  enum.StateSnapshotVerbosity.html  index.html  sidebar-items.js  struct.ChipolataError.html  struct.Display.html  struct.Memory.html  struct.Options.html  struct.Processor.html  struct.Program.html  struct.Stack.html
chipolata/display/: struct.Display.html
chipolata/error/: enum.ErrorDetail.html  struct.ChipolataError.html
chipolata/memory/: struct.Memory.html
chipolata/options/: constant.COSMAC_VIP_PROCESSOR_SPEED_HERTZ.html  struct.Options.html
chipolata/processor/: enum.EmulationLevel.html  enum.ProcessorStatus.html  enum.StateSnapshot.html  enum.StateSnapshotVerbosity.html  struct.Processor.html
chipolata/program/: struct.Program.html
chipolata/stack/: struct.Stack.html
design/: research.md
resources/options/: SCHIP-fast.json  SCHIP-octo.json  SCHIP-slow.json  VIP-fast.json  VIP-slow.json  VIP-variable.json
src/: audio.rs  display.rs  error.rs  event_handlers.rs  font.rs  instruction.rs  keystate.rs  lib.rs  main.rs  memory.rs  options.rs  processor.rs  program.rs  render.rs  resource_strings.rs  stack.rs
src/chipolata/: display.rs.html  error.rs.html  font.rs.html  (+8 more)
(+22 files in other folders)
