[package]
name = "chipolata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.2"
egui = "0.21.0"
rand = "0.8.5"
rodio = "0.17.1"
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
