[package]
name = "chipolata"
version = "1.0.0-alpha"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.2"
egui = "0.21.0"
egui-modal = "0.2.2"
image = "0.24.5"
rand = "0.8.5"
rfd = "0.11.2"
rodio = "0.17.1"
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
